<resources>
    <string name="app_name">Bangkit Merch Store</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Keranjang</string>
    <string name="menu_profile">Profile</string>
    <string name="required_point">%d Pts</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="minus_symbol">—</string>
    <string name="plus_symbol">＋</string>
    <string name="add_to_cart">Tambah ke Keranjang : %d Pts</string>
    <string name="total_order">Total pesanan : %d Pts</string>
    <string name="back">Back</string>
    <string name="bangkit_merch">Dicoding Reward</string>
    <string name="share_message">Hey, I have redeem %1$d merch in Bangkit Merch Store with total %2$d Points. Do you want too? Join Bangkit Academy now at https://g.co/bangkit ! </string>
    <string name="cart_empty">Keranjang kosong, silakan tambahkan merch terlebih dahulu</string>
    <string name="profile_photo">Foto profil</string>
    <string name="find_merch">Cari merch yang kamu inginkan...</string>
    <string name="not_found">Merch yang anda cari tidak dapat ditemukan</string>
</resources>