...
) {
    LazyVerticalGrid(
        columns = GridCells.Adaptive(160.dp),
        contentPadding = PaddingValues(16.dp),
        horizontalArrangement = Arrangement.spacedBy(16.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier.testTag("MerchList")
    ) {
        items(orderMerch, key = {it.merch.id}) { data ->
            MerchItem(
                image = data.merch.image,
                title = data.merch.title,
                requiredPoint = data.merch.requiredPoint,
...
